[package]
name = "devman"
version = "0.1.0"
edition = "2024"

[dependencies]
executor = { git = "https://github.com/popcorn-2/popcorn-server.git" }
popcorn-server = { git = "https://github.com/popcorn-2/popcorn-server.git" }
core-protocols = { git = "https://github.com/popcorn-2/core-protocols.git" }
slab = "0.4.10"

[patch.crates-io]
fastrand = { git = "https://github.com/popcorn-2/fastrand.git" }
